[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Jared Summers <jtsummers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day2021_01"

[lib]
name = "aoc"
src = "src/lib.rs"

[dependencies]
